Checkout process: replaced sections with zones

--- a/src/Presentation/SmartStore.Web/Views/Checkout/BillingAddress.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/BillingAddress.cshtml
@@ -7,8 +7,9 @@
     Html.AddTitleParts(T("PageTitle.Checkout").Text);
 }
 
-@section orderProgress{
-    @{ Html.RenderAction("CheckoutProgress", "Checkout", new { step = CheckoutProgressStep.Address }); }
+@using (Html.BeginZoneContent("orderProgress"))
+{
+    @Html.Action("CheckoutProgress", "Checkout", new { step = CheckoutProgressStep.Address  })
 }
 
 <div class="page billing-address-page">
