--- a/src/Presentation/SmartStore.Web/Views/Checkout/Completed.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/Completed.cshtml
@@ -4,12 +4,12 @@
 @using SmartStore.Web.Models.Common;
 @{
     Layout = "_Checkout";
-
-    //title
     Html.AddTitleParts(T("PageTitle.Checkout").Text);
 }
-@section orderProgress{
-    @{ Html.RenderAction("CheckoutProgress", "Checkout", new { step = CheckoutProgressStep.Complete }); }
+
+@using (Html.BeginZoneContent("orderProgress"))
+{
+    @Html.Action("CheckoutProgress", "Checkout", new { step = CheckoutProgressStep.Complete })
 }
 
 <div class="page checkout-completed-page">
