--- a/src/Presentation/SmartStore.Web/Views/Checkout/ShippingAddress.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/ShippingAddress.cshtml
@@ -1,16 +1,15 @@
 ﻿@model CheckoutShippingAddressModel
-@using SmartStore.Core.Domain.Orders;
 @using SmartStore.Web.Models.Checkout;
-@using SmartStore.Web.Models.Common;
 @{
     Layout = "_Checkout";
-
-    //title
     Html.AddTitleParts(T("PageTitle.Checkout").Text);
 }
-@section orderProgress{
-    @{ Html.RenderAction("CheckoutProgress", "Checkout", new { step = CheckoutProgressStep.Address }); }
+
+@using (Html.BeginZoneContent("orderProgress"))
+{
+    @Html.Action("CheckoutProgress", "Checkout", new { step = CheckoutProgressStep.Address })
 }
+
 <div class="page shipping-address-page">
     <div class="page-title">
         <h1>@T("Checkout.ShippingAddress")</h1>
