--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenuCategories.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenuCategories.cshtml
@@ -20,7 +20,7 @@
         {
             <li class="navigate-back ocm-item" data-id="@currentNode.Parent.Value.EntityId" data-ajax="true">
                 <a href="@currentNode.Parent.Value.GenerateUrl(this.Url)" class="ocm-link">
-                    <i class="fa fa-chevron-left"></i>
+                    <i class="fa fa-angle-left"></i>
                     <span>@T("Common.Back")</span>
                 </a>
             </li>
