--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
@@ -671,49 +671,10 @@ a.pretty-link {
         position: relative;
 		display: block;
         cursor: pointer;
-	}
-
-	.choice-box-element {
-        display: inline-block;
-        border: 1px solid rgba(0,0,0, .3);
-        background-color: #fff;
-        transition: border-color 0.1s linear;
-
-        height: $choice-box-size;
-        line-height: $choice-box-size;
-        min-width: $choice-box-size;
-        vertical-align: middle;
-        text-align: center;
-        overflow: hidden;
-
-        font-weight: 600;
-
-        &:hover { border-color: rgba(0,0,0, 0.7); }
-
-        .choice-box-img {
-            display: block;
-            position: relative;
-            max-width: calc(#{$choice-box-size} - 4px);
-            max-height: calc(100% - 4px);
-            margin: auto;
-            top: 50%;
-            transform: translateY(-50%);
-        }
-
-        .choice-box-text {
-            padding: 0 0.4rem;
-        }
-	}
-
-	.choice-box-control-native:checked + .choice-box-content {
-        .choice-box-element {
-            border-color: rgba(0,0,0, 0.7);
-        }
 
         &:after {
             box-sizing: content-box;
             position: absolute;
-            z-index: 1;
             display: block;
             right: -6px;
             top: -6px;
@@ -731,6 +692,47 @@ a.pretty-link {
             content: "\f00c"; // check
             color: #fff;
             font-size: 10px;
+
+            opacity: 0;
+            transform: scale(0);
+            transition: all 0.1s ease-in;
+        }
+	}
+
+	.choice-box-element {
+        display: inline-block;
+        border: 1px solid rgba(0,0,0, .3);
+        background-color: #fff;
+        transition: border-color 0.1s linear;
+
+        height: $choice-box-size;
+        line-height: $choice-box-size;
+        min-width: $choice-box-size;
+        vertical-align: middle;
+        text-align: center;
+        overflow: hidden;
+        font-weight: 600;
+
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
+
+        &:hover { border-color: rgba(0,0,0, 0.7); }
+
+        .choice-box-text {
+            padding: 0 0.4rem;
+        }
+	}
+
+	.choice-box-control-native:checked + .choice-box-content {
+        .choice-box-element {
+            border-color: rgba(0,0,0, 0.7);
+            outline: 1px solid rgba(0,0,0, 0.7);
+        }
+
+        &:after {
+            opacity: 1;
+            transform: scale(1);
         }
 	}
 
@@ -742,22 +744,19 @@ a.pretty-link {
     &.choice-box-group-xl .choice-box-element {
         height: $choice-box-size-xl;
         line-height: $choice-box-size-xl;
-        min-width: $choice-box-size-xl;
-        .choice-box-img { max-width: calc(#{$choice-box-size-xl} - 4px); }       
+        min-width: $choice-box-size-xl;     
     }
 
     &.choice-box-group-lg .choice-box-element {
         height: $choice-box-size-lg;
         line-height: $choice-box-size-lg;
-        min-width: $choice-box-size-lg;
-        .choice-box-img { max-width: calc(#{$choice-box-size-lg} - 4px); }          
+        min-width: $choice-box-size-lg;       
     }
 
     &.choice-box-group-sm .choice-box-element {
         height: $choice-box-size-sm;
         line-height: $choice-box-size-sm;
-        min-width: $choice-box-size-sm;
-        .choice-box-img { max-width: calc(#{$choice-box-size-sm} - 4px); }          
+        min-width: $choice-box-size-sm;       
     }
 }
 
