--- a/src/Presentation/SmartStore.Web/Views/Shared/ChoiceTemplates/Choice.Box.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/ChoiceTemplates/Choice.Box.cshtml
@@ -12,10 +12,16 @@
 		@foreach (var item in items)
 		{
 			string css = null;
+
 			var hasColor = item.ColorSquaresRgb.HasValue() && item.ColorSquaresRgb != "transparent";
-			if (hasColor && !item.ImageUrl.HasValue())
+			if (hasColor)
 			{
 				css = "background-color: " + item.ColorSquaresRgb + ";";
+			}
+
+			if (item.ImageUrl.HasValue())
+			{
+				css += "background-image: url('" + item.ImageUrl + "');";
 			}
 
 			<li class="choice-box@(item.IsPreSelected ? " selected" : "")@(item.IsDisabled ? " disabled" : "")">
@@ -23,11 +29,7 @@
 					<input type="radio" class="choice-box-control-native" id="@(controlId)_@(item.Id)" name="@(controlId)" value="@item.Id" @Html.Attr("checked", "checked", item.IsPreSelected) @Html.Attr("disabled", "disabled", item.IsDisabled) />
 					<span class="choice-box-content tooltip-toggle" title="@item.GetItemLabel()">
 						<span class="choice-box-element" @Html.Attr("style", css, css.HasValue())>
-							@if (item.ImageUrl.HasValue())
-							{
-								<img class="choice-box-img" src="@item.ImageUrl" alt="" />
-							}
-							else if (!hasColor)
+							@if (!css.HasValue())
 							{
 								<span class="choice-box-text">@item.Name</span>
 							}
