Theming: thumbs & description for InstantSearch product hits

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
@@ -230,6 +230,9 @@ h4, h5, h6, .h4, .h5, .h6 {
     font-weight: $font-weight-medium;
 }
 
+small, .small {
+  font-size: 90%;
+}
 
 
 .pagination {
