--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_search.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_search.scss
@@ -15,6 +15,16 @@ $facet-selection-color:             darken($brand-success, 15%);
     position: relative;
 }
 
+#instasearch-progress {
+    position: absolute;
+    z-index: 2;
+    width: 20px;
+    height: 20px;
+    top: 50%;
+    margin-top: -10px;
+    right: 56px;
+}
+
 .instasearch-term {
     padding: 0.5rem 1rem;
     border-radius: 2px;
@@ -57,6 +67,7 @@ $facet-selection-color:             darken($brand-success, 15%);
     top: 100%;
     margin-top: -1px;
     min-width: 100%;
+    max-width: 100%;
     min-height: 50px;
     border: 1px solid $searchbox-border-active-color;
     box-shadow: 0 6px 6px 0 rgba(0,0,0, 0.12);
@@ -80,12 +91,15 @@ $facet-selection-color:             darken($brand-success, 15%);
 }
 
 .instasearch-group-header {
-    text-transform: uppercase;
-    margin: 0.35rem 20px 0 20px;
+    margin: 0 20px;
     padding-bottom: 0.3rem;
-    font-size: 14px;
-    color: #aaa;
-    font-weight: 600; // rem gets too small on mobile
+    font-size: 22px; // rem gets too small on mobile
+    color: $brand-info;
+    font-weight: 300;
+
+    ~ .instasearch-group-header {
+        margin-top: 1.2rem;
+    }
 }
 
 .instasearch-hits {
@@ -97,6 +111,10 @@ $facet-selection-color:             darken($brand-success, 15%);
     .instasearch-col:first-child &:last-child {
         margin-bottom: 1rem;
     }
+
+    &.has-thumbs li {
+        border-bottom: 1px solid rgba(#000, 0.12);
+    }
 }
 
 @include media-breakpoint-up(sm) {
@@ -105,13 +123,11 @@ $facet-selection-color:             darken($brand-success, 15%);
     }
 }
 @include media-breakpoint-up(lg) {
-    .instasearch-row {
-        width: 740px;
+    #instasearch-drop {
+        max-width: none;
     }
-}
-@include media-breakpoint-up(xl) {
     .instasearch-row {
-        width: 740px;
+        width: 850px;
     }
 }
 
@@ -119,12 +135,13 @@ $facet-selection-color:             darken($brand-success, 15%);
     display: block;
     position: relative;
     width: 100%;
-    padding: 0.35rem 20px;
+    padding: 8px 20px;
     clear: both;
     white-space: normal;
     text-decoration: none;
     color: $dropdown-link-color;
     font-size: 14px; // rem gets too small on mobile
+    line-height: 1.3;
 
     &:focus, &:hover, &.active, &.key-hover {
         color: $dropdown-link-hover-color;
@@ -139,16 +156,24 @@ $facet-selection-color:             darken($brand-success, 15%);
     padding-left: 0.2rem;
 }
 
-#instasearch-progress {
-    position: absolute;
-    z-index: 2;
-    width: 20px;
-    height: 20px;
-    top: 50%;
-    margin-top: -10px;
-    right: 56px;
+.instasearch-hit-wrapper {
+    overflow: hidden;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
 }
 
+.instasearch-hit-thumb {
+    width: 48px; 
+    min-width: 48px; 
+    max-height: 36px; 
+    padding-right: 12px;
+}
+
+.instasearch-hit-label-secondary {
+    padding-top: 4px;
+    color: $text-muted;
+}
 
 //
 // Search Page Styles
@@ -156,6 +181,7 @@ $facet-selection-color:             darken($brand-success, 15%);
 
 .search-term {
     color: $brand-danger;
+    font-size: 12px;
 }
 
 .search-hitcount {
