Theming: scroll-top button

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
@@ -811,3 +811,24 @@ a.pretty-link {
     font-size: 1rem;
 }
 
+
+#scroll-top {
+    z-index: 9999;
+    position: fixed;
+    bottom: 80px;
+    right: 0;
+    width: 36px;
+    height: 36px;
+    border-radius: 3px 0 0 3px;
+    border: 1px solid rgba(0,0,0, 0.15);
+    border-right-width: 0;
+    background: rgba(255,255,255, 0.9);
+    color: $body-color !important;
+    text-decoration: none;
+    transform: translate3d(100%, 0, 0);
+    transition: transform .2s ease-in-out;
+    &.in {
+        transform: translate3d(0, 0, 0);
+    }
+}
+
