--- a/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Layout.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Layout.cshtml
@@ -123,10 +123,14 @@
 					}
 				</footer>
 			</div>
-                        }
+        }
 
 		@{ Html.RenderZone("page-end"); }
     </div>
+
+	<a href="#" id="scroll-top" class="d-flex align-items-center justify-content-center">
+		<i class="fa fa-2x fa-angle-up"></i>
+	</a>
 </div>
 
 @{ Html.RenderWidget("body_end_html_tag_before"); }
