Search: Testing filters for linq search. HitCount cannot be a criteria whether to render a filter or not.

--- a/src/Presentation/SmartStore.Web/Views/Search/FacetTemplates/MultiSelect.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Search/FacetTemplates/MultiSelect.cshtml
@@ -12,7 +12,7 @@
 		{
 			if (facet.IsChoice)
 			{
-				if (facet.HitCount > 0 || facet.Value.IsSelected)
+				if (facet.Published)
 				{
 					flattened.Add(facet);
 				}
