--- a/src/Presentation/SmartStore.Web/Administration/Views/SpecificationAttribute/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/SpecificationAttribute/_CreateOrUpdate.cshtml
@@ -128,6 +128,9 @@
 							columns.Bound(x => x.Name);
 							//TODO display localized values here
 							columns.Bound(x => x.Alias);
+							columns.Bound(x => x.NumberValue)
+								.Width(180)
+								.Centered();
 							columns.Bound(x => x.DisplayOrder)
 								.Width(180)
 								.Centered();
