--- a/src/Presentation/SmartStore.Web/Views/Search/FacetTemplates/SingleSelect.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Search/FacetTemplates/SingleSelect.cshtml
@@ -6,7 +6,7 @@
 <div class="facet-body-inner scrollable">
 	@foreach (var facet in Model.Facets)
 	{
-		if (facet.HitCount > 0 || facet.Value.IsSelected)
+		if (facet.Published)
 		{
 			<div class="facet-item facet-radio" data-href="@Url.FacetToggle(facet)">
 				<label>
