Theming: desperately trying to prevent body scroll with offcanvas on F*CKING(!) iOS Safari (in progress)

--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenuCategories.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenuCategories.cshtml
@@ -11,7 +11,7 @@
 	@if (currentNode.Depth > 0)
 	{
 		<div class="category-info">
-			<div class="category-name">@currentNode.Value.Text</div>
+			<h3 class="category-name">@currentNode.Value.Text</h3>
 		</div>
 	}
 
