--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_menu.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_menu.scss
@@ -61,11 +61,10 @@ $ocm-horizontal-padding:                1.6rem;
             color: $body-color;
             line-height: 1.3;
             padding: 1rem 2.5rem 1rem 2rem;
+            text-decoration: none !important;
                 
             &:active,
-            &:focus,
-            &:hover { 
-                text-decoration: none;
+            &:focus { 
                 background-color: rgba(#000, 0.05);
             }   
                
@@ -119,9 +118,7 @@ $ocm-horizontal-padding:                1.6rem;
     }
     .category-info {
         padding: 0 $ocm-horizontal-padding;
-
         .category-name {
-            font-size: 1.5rem;
             padding-top: 1rem;
         }
     }
