--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_offcanvas.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_offcanvas.scss
@@ -15,11 +15,21 @@ $offcanvas-menu-bg: $gray-lightest; // $clr-blue-grey-900;
 /* PARENT CANVAS
 --------------------------------------------*/
 
+/*html, body {
+    height: 100%;
+}
+
+#page {
+    overflow: auto;
+}*/
+
 .canvas-slidable {
     z-index: 0;
     transform: translate3d(0, 0, 0);
     transition: opacity $offcanvas-duration $offcanvas-easing,
                 transform $offcanvas-duration $offcanvas-easing;
+
+    /*overflow: auto;*/
 
     /*body.canvas-sliding & {
         overflow: hidden; 
@@ -162,13 +172,21 @@ body.canvas-blocking .canvas-blocker {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    touch-action: none;
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch;
+    //touch-action: none;
 }
 
 .offcanvas-scrollable {
     touch-action: pan-y;
     overflow-x: hidden;
     overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+}
+
+.offcanvas-shim {
+    width: 1px;
+    min-height: 101vh;
 }
 
 
