--- a/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenuManufacturers.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/Partials/OffCanvasMenuManufacturers.cshtml
@@ -9,15 +9,19 @@
         @foreach (var manufacturer in Model.Manufacturers)
         {
             <li class="ocm-item" data-ajax="false">
-                <a href="@Url.RouteUrl("Manufacturer", new { SeName = manufacturer.SeName })" class="ocm-link">
-
-                    @if (manufacturer.PictureUrl.HasValue() && Model.DisplayImages)
-                    {
-                        <img src="@manufacturer.PictureUrl" alt="@manufacturer.Name" title="@manufacturer.Name" />
-                    }
-
-                    @manufacturer.Name
-                </a>
+                <div class="row sm-gutters align-items-center">
+                    <div class="col-xs col-img">
+                        <a href="@Url.RouteUrl("Manufacturer", new { SeName = manufacturer.SeName })" class="ocm-link img-center-container">
+                            @if (manufacturer.PictureUrl.HasValue() && Model.DisplayImages)
+                            {
+                                <img src="@manufacturer.PictureUrl" alt="@manufacturer.Name" title="@manufacturer.Name" />
+                            }
+                        </a>
+                    </div>
+                    <div class="col-xs col-data">
+                        @manufacturer.Name
+                    </div>
+                </div>
             </li>
         }
 
