Theming: show page index & size in product list pages

--- a/src/Presentation/SmartStore.Web/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
@@ -12,6 +12,14 @@
 		Html.AddCanonicalUrlParts(categoryUrl);
 	}
 
+	int firstItemIndex = 0;
+	int lastItemIndex = 0;
+	if (Model.SearchResult.TotalHitsCount > 0)
+	{
+		firstItemIndex = Model.SearchResult.Hits.FirstItemIndex;
+		lastItemIndex = Model.SearchResult.Hits.LastItemIndex;
+	}
+
 	Layout = "_Layout";
 }
 
@@ -59,6 +67,10 @@
         <h1 class="h3">
 			@(Model.FullName.HasValue() ? Model.FullName : Model.Name)
 		</h1>
+		@if (Model.SearchResult.TotalHitsCount > 0)
+		{
+			<h5 class="search-hitcount">@T("Search.PagingInfo", "{0}-{1}".FormatInvariant(firstItemIndex.ToString("N0"), lastItemIndex.ToString("N0")), Model.SearchResult.TotalHitsCount.ToString("N0"))</h5>
+		}
     </div>
 
     <div class="page-body">
