--- a/src/Presentation/SmartStore.Web/Views/Common/Partials/Menu.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/Partials/Menu.cshtml
@@ -24,7 +24,7 @@
         <div class="dropdown service-links">
             <a class="menubar-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">
 				<span>@T("Menu.ServiceMenu")</span>
-                <i class="fa fa-caret-down"></i>
+                <i class="fa fa-angle-down"></i>
             </a>
 
             <div class="dropdown-menu" aria-labelledby="dLabel">
@@ -87,7 +87,7 @@
                 @if (Model.IsAuthenticated)
                 {
 					<span>@T("Account.MyAccount")</span>
-                    <i class="fa fa-caret-down"></i>
+                    <i class="fa fa-angle-down"></i>
                 }
                 else
                 {
