Theming: show message when facet filters are active with empty result

--- a/src/Presentation/SmartStore.Web/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
@@ -104,13 +104,13 @@
                     Html.RenderPartial("Product.List", Model.FeaturedProducts);
 				}
             </div>
-                    }
+        }
 
         @* Product list *@
         @{ Html.RenderWidget("categorydetails_before_product_list"); }
 
         <div class="product-list-container">
-            @if (Model.Products != null && Model.Products.Items.Count > 0)
+            @if (Model.Products != null)
             {
                 Html.RenderPartial("Product.List", Model.Products);
             }
