--- a/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Layout.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Layout.cshtml
@@ -68,7 +68,7 @@
         <div id="content-wrapper">
             <section id="content" class="container m-t-1">
 				@{ 
-					RenderSection("teaser", required: false);
+					@RenderSection("teaser", required: false);
 					Html.RenderAction("Breadcrumb", "Common", new { area = "" });
 					Html.RenderZone("teaser");
 					Html.RenderWidget("after_teaser");
