--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductsByTag.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductsByTag.cshtml
@@ -52,7 +52,7 @@
         @{ Html.RenderWidget("productsbytag_top"); }
 
 		<div class="product-list-container">
-			@if (Model.Products != null && Model.Products.Items.Count > 0)
+			@if (Model.Products != null)
             {
                 Html.RenderPartial("Product.List", Model.Products);
             }
