--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_search.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_search.scss
@@ -58,6 +58,7 @@ $facet-selection-color:             darken($brand-success, 15%);
 .instasearch-icon {
     position: relative;
     top: 0.12rem;
+    font-size: inherit !important;
 }
 
 #instasearch-drop {
